--- a/.gitignore
+++ b/.gitignore
@@ -130,9 +130,11 @@ dmypy.json
 
 *.idea
 *.sh
-#*.h5
+*.h5
 .vscode/
 rawdata/
 augmented/
-UCMercedImages
-UCMercedLabels
+BaseImageDataPickle
+BaseLabelDataPickle
+AugmentedImageDataPickle
+AugmentedLabelDataPickle
